[tool.poetry]
name = "project_euler"
version = "0.1.0"
description = "Project Euler solutions written in various languages such as; Python, Rust, and Go"
authors = ["Jack Hodgkiss <identity@jackhodgkiss.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.4"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
